@@ -31,8 +31,11 @@
 ")
 
 
-(define-public (output-classic-framework outputter book scopes fields basename)
-  (let* ((paper (ly:paper-book-paper book))
+(define-public (output-classic-framework basename book scopes fields)
+  (let* ((filename (format "~a.texstr" basename))
+	 (outputter  (ly:make-paper-outputter filename
+					      (ly:output-backend)))
+	 (paper (ly:paper-book-paper book))
 	 (lines (ly:paper-book-systems book))
 	 )
     (ly:outputter-dump-string outputter (header basename))
@@ -42,8 +45,11 @@
      lines)
     (ly:outputter-dump-string outputter (footer))))
 
-(define-public (output-framework outputter book scopes fields basename)
-  (let* ((paper (ly:paper-book-paper book))
+(define-public (output-framework basename book scopes fields )
+  (let* ((filename (format "~a.texstr" basename))
+	 (outputter  (ly:make-paper-outputter filename
+					      (ly:output-backend)))
+	 (paper (ly:paper-book-paper book))
 	 (pages (ly:paper-book-pages book))
 	 )
     (ly:outputter-dump-string outputter (header basename))
