@@ -47,7 +47,7 @@
 (define-public point-and-click #f)
 
 (define-public tex-backend?
-  (memq (ly:output-backend) '("texstr" "tex")))
+  (member (ly:output-backend) '("texstr" "tex")))
 
 (define-public parser #f)
 
